syntax = "proto3";

import "scalapb/scalapb.proto";
//import "google/protobuf/timestamp.proto";
import "UserEntity.proto";

package com.jc.user.api.proto;

option (scalapb.options) = {
  package_name: "com.jc.user.search.api.proto"
  import: "com.jc.user.domain.proto._"
  flat_package: true
};

//option java_multiple_files = true;
//option java_package = "com.jc.user.api.proto";


enum SortOrder {
    ASC = 0;
    DESC = 1;
}

message FieldSort {
    string field = 1;
    SortOrder order = 2;
}


message TermSuggestion {
    string text = 1 [(scalapb.field).no_box = false];
    double score = 2;
    int32 freq = 3;
}

message PropertySuggestion {
    string property = 1 [(scalapb.field).no_box = false];
    repeated TermSuggestion suggestions = 2;
}

message GetUserReq {
    string id = 1 [(scalapb.field).type = "com.jc.user.domain.UserEntity.UserId"];
}

message GetUserRes {
    com.jc.user.domain.proto.User user = 1;
}

message SearchUsersReq {
    string query = 1 [(scalapb.field).no_box = false];
    int32 page = 2;
    int32 pageSize = 3;
    repeated FieldSort sorts = 4;
}

message SearchUsersRes {
    repeated com.jc.user.domain.proto.User users = 1;
    int32 page = 2;
    int32 pageSize = 3;
    int32 count = 4;
    oneof result {
        string success = 5;
        string failure = 6;
    }
}

message SearchUserStreamReq {
    string query = 1 [(scalapb.field).no_box = false];
    repeated FieldSort sorts = 2;
}

message SuggestUsersReq {
    string query = 1 [(scalapb.field).no_box = false];
}

message SuggestUsersRes {
    repeated PropertySuggestion suggestions = 1;
    oneof result {
        string success = 2;
        string failure = 3;
    }
}

message GetDepartmentReq {
    string id = 1 [(scalapb.field).type = "com.jc.user.domain.DepartmentEntity.DepartmentId"];
}

message GetDepartmentRes {
    com.jc.user.domain.proto.Department department = 1;
}

message SearchDepartmentsReq {
    string query = 1 [(scalapb.field).no_box = false];
    int32 page = 2;
    int32 pageSize = 3;
    repeated FieldSort sorts = 4;
}

message SearchDepartmentsRes {
    repeated com.jc.user.domain.proto.Department departments = 1;
    int32 page = 2;
    int32 pageSize = 3;
    int32 count = 4;
    oneof result {
        string success = 5;
        string failure = 6;
    }
}

message SearchDepartmentStreamReq {
    string query = 1 [(scalapb.field).no_box = false];
    repeated FieldSort sorts = 2;
}

message SuggestDepartmentsReq {
    string query = 1 [(scalapb.field).no_box = false];
}

message SuggestDepartmentsRes {
    repeated PropertySuggestion suggestions = 1;
    oneof result {
        string success = 2;
        string failure = 3;
    }
}

service UserSearchApiService {

    rpc GetUser (GetUserReq) returns (GetUserRes) {
    }

    rpc SearchUsers (SearchUsersReq) returns (SearchUsersRes) {
    }

    rpc SearchUserStream (SearchUserStreamReq) returns (stream com.jc.user.domain.proto.User) {
    }

    rpc SuggestUsers (SuggestUsersReq) returns (SuggestUsersRes) {
    }

    rpc GetDepartment (GetDepartmentReq) returns (GetDepartmentRes) {
    }

    rpc SearchDepartments (SearchDepartmentsReq) returns (SearchDepartmentsRes) {
    }

    rpc SearchDepartmentStream (SearchDepartmentStreamReq) returns (stream com.jc.user.domain.proto.Department) {
    }

    rpc SuggestDepartments (SuggestDepartmentsReq) returns (SuggestDepartmentsRes) {
    }
}
